Исправляет основу проекта

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cat-energy",
-	"description": "«Учебный проект - Кэт энерджи»",
+	"description": "Учебный проект - «Кэт энерджи»",
 	"author": "Sergey Bodnaryuk <s.bodnaryuk@gmail.com>",
 	"homepage": "https://github.com/justGoodFellow/cat-energy",
 	"private": true,
